Yearly tracking as option Default create accumulated cost sensor Clearer entity ids

--- a/custom_components/simple_dynamic_energy_cost/translations/en.json
+++ b/custom_components/simple_dynamic_energy_cost/translations/en.json
@@ -9,9 +9,10 @@
             "price_sensor": "Price Sensor",
             "period_hourly": "Create Hourly Cost Sensor",
             "period_daily": "Create Daily Cost Sensor",
-            "period_monthly": "Create Monthly Cost Sensor"
+            "period_monthly": "Create Monthly Cost Sensor",
+            "period_yearly": "Create Yearly Cost Sensor"
           }
         }
       }
     }
-  }
+}
